# fractal-dim-analyzer

./: README.md  app.py  pyproject.toml
assets/: data.xlsx
scripts/: data_process.py  fractal_calculation.py  image_process.py  lib.py
