[tool.poetry]
name = "fractal-dim-analyzer"
version = "0.1.0"
description = ""
authors = ["Nikolay Vashentsev <DonutsHunter@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.33.0"
matplotlib = "^3.8.4"
opencv-python = "^4.9.0.80"
numpy = "^1.26.4"
pillow = "^10.3.0"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
